--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^8.0.0",
-    "rollup": "^1.32.1",
-    "rollup-plugin-uglify": "^6.0.4"
+    "mocha": "^9.1.3",
+    "rollup": "^2.60.0"
   }
 }
